--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -1,22 +1,17 @@
 /* Colors */
 
 $primary-color:  #ff7b00;
-$secondary-color:#0d1941;
+$secondary-color:#131a2c;
 $accent-color: #13bac4;
-$bg-secondary-color: #bebebe;
-$text-color:#585858;
-
+$bg-color: #ff9558;
+$bg-secondary-color:#ffdeca;
+$h-color:#585858;
+$text-color:#797979;
+$bg-cards:#fafafa;
 $white:#ffffff;
+
 
 /* fonts */
 
 $primary-font:'Poppins', sans-serif;
 
-/*  */
-
-%transform {
-    transform: scale(1.3);
-        -webkit-transform: scale(1.3);
-        -o-transform: scale(1.3);
-        -moz-transform: scale(1.3);
-}
