--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -1,41 +1,70 @@
 @import "../base/variables"; 
 
-button {
+/* Buttons */
+
+.info-aplica {
+  border: 2px solid $accent-color;
+  border-radius: 2rem;
+  display: inline-block;
+  padding: 0.7rem 1.5rem;
+  margin:2rem 0;
+  border-radius: 10rem;
+  color:$accent-color;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: .15rem;
+  transition: all .3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  background-color: transparent;
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10rem;
+    z-index: -2;
+  }
+  &:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
     background-color: $accent-color;
-    border: none;
-    color: $white;
-    padding: 1rem 2rem;
-    text-align: center;
-    text-decoration: none; 
-    font-size: 1rem;
-    border-radius: 2rem;
-    transition: background-color .5s;
-
-    &:hover{
-        background-color: #ff7b00;
-
-        @extend %transform;
-
+    transition: all 0.3s;
+    border-radius: 10rem;
+    z-index: -1;
+  }
+  &:hover {
+    color: #fff;
+    &:before {
+      width: 100%;
     }
-
+  }
 }
 
+/* Boton back to top */
+
+
 #myBtn {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    border: none;
-    outline: none;
-    background-color: #ff7b00;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 50px;
-    font-size: 18px;
-  }
-  
-  #myBtn:hover {
-    background-color: #13bac4;
-  }
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: $accent-color;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50px;
+  font-size: 18px;
+}
+
+
