--- a/assets/scss/components/_texts.scss
+++ b/assets/scss/components/_texts.scss
@@ -1,4 +1,3 @@
-@import "../scss/base/variables"; 
 
 h1,
 h2,
@@ -12,34 +11,47 @@ a {
 }
 
 h1 {
-    font-size: 1.7em;
+    font-size: 2.4em;
+    color:$white;
 }
 
 h2 {
-    font-size: 1.25rem;
+    font-size: 2rem;
+    color: $white;
 }
 
 h3 {
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin-bottom: 0.5rem;
+    text-align:center;
+    font-weight: 600;
+    color:$secondary-color;
+    
 }
 
  h4  {
-    font-size: 0.95rem;
+    font-size: 1.2rem;
     font-weight: 500;
-    margin-bottom: 0;
+    text-align:center;
+    color:$h-color;
 }
 
  h5  {
-    font-size: 0.8rem;
+    font-size: 1rem;
+    text-align: center;
+    line-height: 1.5rem;
+    color:$text-color;
 }
 
-h6 {
-    font-size: 0.6rem;
-}
 
 p,
 a {
-    font-size: 0.88rem;
+    font-size: 0.9rem;
     text-align: center;
+    line-height: 1rem;
+    padding: 1rem 1rem 2rem;
 }
+em {
+    color:$white;
+}
+
