--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,98 +1,10 @@
-@import "../scss/base/variables"; 
-@import "../scss/components/buttons"; 
-@import "../scss/components/portada";
-@import "../scss/components/texts";
-@import "../scss/components/reset";
+@import "base/variables";
+@import "base/reset";
+@import "components/buttons";
+@import "components/portada";
+@import "components/texts";
+@import "components/cards";
+@import "components/footer";
+@import "components/sections";
 
 
-
- 
-  h3{
-      font-weight: 300;
-      font-size: 2rem; 
-      color: #212A2F;
-      padding: 3rem;
-      text-align: center;
-  }
-  
-  p { 
-      font-weight: 200;
-      font-size: 1.3rem; 
-      color: #212A2F;
-      /* padding: 0rem 10rem;
-      text-align: center; */
-  }
-  
-  
-   h4{
-      font-weight: 400;
-      font-size: 1.3rem; 
-      color:$primary-color;
-  }
-  
-  .clients{
-      background-color: #d1d1d1;  
-  }
-  
-  section {
-      margin: 3rem 0 6rem 0;  
-  }
-  
-  .container-fluid{
-      padding:0;
-      margin:0;
-  }
-  
-  #myBtn {
-      display: none; 
-      position: fixed; 
-      bottom: 20px; 
-      right: 30px; 
-      z-index: 99; 
-      border: none; 
-      outline: none;
-      background-color:$primary-color;
-      color: white;
-      cursor: pointer; 
-      padding: 15px; 
-      border-radius: 50px; 
-      font-size: 18px; 
-    }
-    
-    #myBtn:hover {
-      background-color:$accent-color; 
-    }
-  
-    /* Carreras*/
-  
-    .card-text p {
-        text-align: left;
-        padding: 0;
-    }
-    
-    /* Carreras*/
-  
-    footer{
-        background-color: #212A2F;
-        padding: 3rem 0rem;
-    }
-    
-    .form-label{
-        color:white;
-    }
-  
-    .footer--buttons{
-        padding:3rem;
-    }
-    
-  
-  
-  
-  
-  
-      
-  
-  
-  
-  
-  
